# sloposcope

./: .gitignore  GAMIFICATION_VISION.md  README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
e2e/: graph.test.js
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: graph.rs  jj.rs  lib.rs  main.rs  parser.rs  vcs.rs
src/lib/: Editor.svelte  Eyeloss.svelte  NodeDetailsWindow.svelte  Robot.svelte  Sloposcope.svelte  Window.svelte  coord_utils.js  fortunes.js  shortcuts.js
src/styles/: app.css
